GNOME Bugzilla – Bug 687663
Indentation plugins action group fixes.
Last modified: 2012-11-06 21:13:33 UTC
The indentation plugins should use different action groups from the code assistance plugins.
Created attachment 228141 [details] [review] indentation-c-style: Rename action group to "C Indentation" and remove it on deactivation.
Created attachment 228142 [details] [review] indentation-python-style: Rename action group to "Python Indentation".
Review of attachment 228141 [details] [review]: Thank, I have committed your patch.
Review of attachment 228142 [details] [review]: Thank, I have committed this one too.