indentation-c-style: Rename action group to "C Indentation" and remove it on deactivation.

https://bugzilla.gnome.org/show_bug.cgi?id=687663